[metadata]
name = arch_wg
summary = OpenStack Architecture WG resources, documents and investigations
description-file =
    README.rst
author = OpenStack
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License

[files]
packages =
    arch_wg

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
